--- a/kairos-ui/kairos-ui/src/index.html
+++ b/kairos-ui/kairos-ui/src/index.html
@@ -5,10 +5,11 @@
   <title>KairosUi</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link id="layout-css" rel="stylesheet" type="text/css" href="assets/sass/layout/_main.scss">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
 </head>
 <body>
   <app-root></app-root>
